--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,17 +10,17 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
-    "@repo/ui": "*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@repo/ui": "^0.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
+    "@repo/eslint-config": "^0.0.0",
+    "@repo/typescript-config": "^0.0.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "typescript": "5.5.4",
     "vite": "^6.2.2"
   }
