refactor(package): update package references and ESLint configurations to align with new naming convention
- Changed package name prefix from `@repo` to `@vernisai` in various package.json files
- Updated ESLint configurations to reference the new package names
- Adjusted TypeScript configuration extends to use the new naming scheme
- Modified import statements in the web app to reflect the updated package names

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,13 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
-    "@repo/ui": "^0.0.0",
+    "@vernisai/ui": "^0.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@repo/eslint-config": "^0.0.0",
-    "@repo/typescript-config": "^0.0.0",
+    "@vernisai/eslint-config": "^0.0.0",
+    "@vernisai/typescript-config": "^0.0.0",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
