--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ui",
+  "name": "@vernisai/ui",
   "version": "0.0.0",
   "exports": {
     ".": "./index.ts",
@@ -16,8 +16,8 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@repo/eslint-config": "^0.0.0",
-    "@repo/typescript-config": "^0.0.0",
+    "@vernisai/eslint-config": "^0.0.0",
+    "@vernisai/typescript-config": "^0.0.0",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "eslint": "^8.57.1",
