--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -6,8 +6,8 @@ on:
     branches: [main, master]
 
 jobs:
-  lint-and-build:
-    name: Lint and Build
+  validate:
+    name: Validate Code
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -22,14 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint
-        run: npm run lint
-
-      - name: Format check
-        run: npx prettier --check "**/*.{ts,tsx,md}"
-
-      - name: Build
-        run: npm run build
+      - name: Run validation
+        run: npm run validate
         env:
-          # Add any environment variables needed for build
           NODE_ENV: production
