--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
+    "validate": "npm run lint && npm run format:check && npm run build",
+    "prepare": "husky"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "turbo": "^2.4.4"
   },
@@ -24,5 +29,14 @@
   "dependencies": {
     "audit": "^0.0.6",
     "drizzle-orm": "^0.41.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
