--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "validate": "npm run lint && npm run format:check && npm run build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "turbo run test",
+    "clean": "turbo run clean"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
