--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,12 +7,15 @@
     "dev": "vite --clearScreen false",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint \"src/**/*.ts\""
+    "lint": "eslint \"src/**/*.ts\"",
+    "validate": "tsc --noEmit && eslint \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@vernisai/ui": "^0.0.0",
+    "lucide-react": "^0.335.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "@vernisai/eslint-config": "^0.0.0",
@@ -20,7 +23,10 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.57.1",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.5.4",
     "vite": "^6.2.2"
   }
