--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,7 @@
   "exports": {
     ".": "./index.ts",
     "./styles": "./src/styles/index.ts",
+    "./styles/global.css": "./src/styles/global.css",
     "./components": "./src/components/index.ts",
     "./lib": "./src/lib/index.ts"
   },
