--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -27,10 +28,10 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@vernisai/eslint-config": "^0.0.0",
-    "@vernisai/typescript-config": "^0.0.0",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@vernisai/eslint-config": "^0.0.0",
+    "@vernisai/typescript-config": "^0.0.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.1",
     "postcss": "^8.4.35",
