--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,7 @@ DATABASE_URL=postgresql://username:password@localhost:5432/database_name
 # Supabase connection
 SUPABASE_URL=your_supabase_url
 SUPABASE_KEY=your_supabase_key 
+
+LANGFUSE_SECRET_KEY=
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_HOST="https://host.com"
