feat(env): enhance environment configuration and testing capabilities
- Updated .env.local.example to include comprehensive environment variable documentation
- Created a new dedicated config package (@monsoft/vernisai-config) for centralized environment configuration management
- Implemented Zod schema validation for environment variables
- Added new scripts in package.json for running web and API servers separately or together
- Introduced a test API router to expose environment configuration in development mode
- Created a dedicated test page at /env-test to verify environment configuration loading
- Improved error handling and validation in the configuration package
- Updated README.md with concise environment documentation and usage instructions

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,12 +14,13 @@
     "build": "tsup",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "lint": "eslint src/",
-    "dev": "tsup --watch",
-    "dev:server": "cross-env API_SERVER_MODE=server tsx src/server.ts",
+    "dev": "npm run build && cross-env API_SERVER_MODE=server node dist/server.js",
+    "dev:server": "cross-env API_SERVER_MODE=server node dist/server.js",
     "start:server": "cross-env API_SERVER_MODE=server node dist/server.js",
     "generate:openapi": "tsx src/scripts/generate-openapi.ts"
   },
   "dependencies": {
+    "@monsoft/vernisai-config": "*",
     "@trpc/server": "^10.44.1",
     "@vernisai/database": "*",
     "cors": "^2.8.5",
