--- a/.env.local.example
+++ b/.env.local.example
@@ -1,10 +1,24 @@
-# Database connection
+# Required Environment Variables
+# ===========================
+
+# Database connection (required)
 DATABASE_URL=postgresql://username:password@localhost:5432/database_name
 
-# Supabase connection
+# Optional Environment Variables
+# ===========================
+
+# API Configuration
+API_SERVER_MODE=serverless  # Options: serverless, server
+API_PORT=3001
+API_CORS_ORIGIN=*
+API_TRPC_ENDPOINT=/api/trpc
+LOG_LEVEL=info  # Options: debug, info, warn, error
+
+# Supabase connection (optional)
 SUPABASE_URL=your_supabase_url
 SUPABASE_KEY=your_supabase_key 
 
-LANGFUSE_SECRET_KEY=
-LANGFUSE_PUBLIC_KEY=
-LANGFUSE_HOST="https://host.com"
+# LangFuse for Observability (optional)
+LANGFUSE_SECRET_KEY=your_langfuse_secret_key
+LANGFUSE_PUBLIC_KEY=your_langfuse_public_key
+LANGFUSE_HOST=https://your-langfuse-host.com
