--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --clearScreen false",
     "build": "tsc && vite build",
+    "start": "vite preview --port 3000",
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.ts\"",
     "validate": "tsc --noEmit && eslint \"src/**/*.{ts,tsx}\""
