--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "dev:web": "turbo run dev --filter web",
+    "dev:api": "turbo run dev --filter @monsoft/vernisai-api",
+    "dev:all": "turbo run dev --filter web --filter @monsoft/vernisai-api",
+    "start": "turbo run start",
+    "start:web": "turbo run start --filter web",
+    "start:api": "turbo run start --filter @monsoft/vernisai-api",
+    "start:all": "turbo run start --filter web --filter @monsoft/vernisai-api",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
