--- a/.env.local.example
+++ b/.env.local.example
@@ -14,6 +14,12 @@ API_CORS_ORIGIN=*
 API_TRPC_ENDPOINT=/api/trpc
 LOG_LEVEL=info  # Options: debug, info, warn, error
 
+# Proxy Configuration (optional)
+PROXY_PORT=3000
+CLIENT_URL=http://localhost:5173
+SERVER_URL=http://localhost:3001
+API_PATH_PATTERN=/api/
+
 # Supabase connection (optional)
 SUPABASE_URL=your_supabase_url
 SUPABASE_KEY=your_supabase_key 
