--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "dev": "turbo run dev",
     "dev:web": "turbo run dev --filter web",
     "dev:api": "turbo run dev --filter @monsoft/vernisai-api",
-    "dev:all": "turbo run dev --filter web --filter @monsoft/vernisai-api",
+    "dev:proxy": "turbo run dev --filter @monsoft/vernisai-proxy",
+    "dev:all": "turbo run dev --filter web --filter @monsoft/vernisai-api --filter @monsoft/vernisai-proxy",
     "start": "turbo run start",
     "start:web": "turbo run start --filter web",
-    "start:api": "turbo run start --filter @monsoft/vernisai-api",
-    "start:all": "turbo run start --filter web --filter @monsoft/vernisai-api",
+    "start:api": "turbo run dev:server --filter @monsoft/vernisai-api",
+    "start:proxy": "turbo run start --filter @monsoft/vernisai-proxy",
+    "start:all": "turbo run start --filter web --filter @monsoft/vernisai-api --filter @monsoft/vernisai-proxy",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
@@ -39,8 +41,10 @@
   ],
   "dependencies": {
     "@tanstack/react-router": "^1.114.27",
+    "@types/http-proxy": "^1.17.16",
     "audit": "^0.0.6",
-    "drizzle-orm": "^0.41.0"
+    "drizzle-orm": "^0.41.0",
+    "http-proxy": "^1.18.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
