--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,7 +14,7 @@
     "build": "tsup",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "lint": "eslint src/",
-    "dev": "npm run build && cross-env API_SERVER_MODE=server node dist/server.js",
+    "dev": "ts-node --transpile-only --esm src/server.ts",
     "dev:server": "cross-env API_SERVER_MODE=server node dist/server.js",
     "start:server": "cross-env API_SERVER_MODE=server node dist/server.js",
     "generate:openapi": "tsx src/scripts/generate-openapi.ts"
@@ -42,6 +42,7 @@
     "prettier": "^3.5.3",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.1"
   }
 }
