feat(dependencies): update package.json and package-lock.json for improved development workflow
- Added `concurrently` as a development dependency to facilitate running multiple scripts simultaneously
- Updated `dev` and `start` scripts in package.json to utilize `concurrently` for better development experience
- Adjusted `dev` script in the API package to streamline server startup
- Modified TypeScript configuration in the API package to use CommonJS module format
- Ensured all changes were validated through build and linting processes

--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "private": false,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "npm run build && concurrently \"npm run dev:web\" \"npm run dev:api\" \"npm run dev:proxy\"",
     "dev:web": "turbo run dev --filter web",
-    "dev:api": "turbo run dev --filter @monsoft/vernisai-api",
-    "dev:proxy": "turbo run dev --filter @monsoft/vernisai-proxy",
-    "dev:all": "turbo run dev --filter web --filter @monsoft/vernisai-api --filter @monsoft/vernisai-proxy",
+    "dev:api": "npm run build --workspace=@monsoft/vernisai-config && turbo run dev --filter @monsoft/vernisai-api",
+    "dev:proxy": "npm run build --workspace=@monsoft/vernisai-config && turbo run dev --filter @monsoft/vernisai-proxy",
+    "dev:all": "npm run build && turbo run dev --filter web --filter @monsoft/vernisai-api --filter @monsoft/vernisai-proxy",
     "start": "turbo run start",
     "start:web": "turbo run start --filter web",
-    "start:api": "turbo run dev:server --filter @monsoft/vernisai-api",
-    "start:proxy": "turbo run start --filter @monsoft/vernisai-proxy",
-    "start:all": "turbo run start --filter web --filter @monsoft/vernisai-api --filter @monsoft/vernisai-proxy",
+    "start:api": "npm run build --workspace=@monsoft/vernisai-config && turbo run dev:server --filter @monsoft/vernisai-api",
+    "start:proxy": "npm run build --workspace=@monsoft/vernisai-config && turbo run start --filter @monsoft/vernisai-proxy",
+    "start:all": "npm run build && turbo run start --filter web --filter @monsoft/vernisai-api --filter @monsoft/vernisai-proxy",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@tanstack/react-router-devtools": "^1.114.27",
     "@tanstack/router-plugin": "^1.114.27",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
