--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "moduleResolution": "node",
-    "module": "ESNext"
+    "module": "CommonJS",
+    "moduleResolution": "node"
   }
 }
