--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "extends": "../typescript-config/base.json",
   "include": ["src"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"],
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
     "module": "CommonJS",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": ["node"]
   }
 }
