--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -4,8 +4,9 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["node"]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
