--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "validate": "npm run lint && npm run format:check && npm run build",
     "prepare": "husky",
     "test": "turbo run test",
+    "test:coverage": "turbo run test:coverage",
+    "test:e2e": "echo \"No E2E tests configured yet\"",
     "clean": "turbo run clean"
   },
   "devDependencies": {
