--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -41,13 +41,14 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vernisai/testing": "*",
+    "@vitest/coverage-v8": "^3.0.9",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "prettier": "^3.5.3",
+    "ts-node": "^10.9.1",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.3.3",
-    "ts-node": "^10.9.1",
     "vitest": "^3.0.9"
   }
 }
