feat(config): update ESLint and TypeScript configurations across packages
- Enhanced ESLint configurations to ignore dist and node_modules directories in web and UI packages
- Updated TypeScript configurations to exclude dist directories and added compiler options for better type handling
- Ensured consistency in TypeScript settings across web and UI packages

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "@vernisai/typescript-config/vite.json",
   "include": ["src"],
+  "exclude": ["node_modules", "dist"],
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["node", "vite/client"],
+    "skipLibCheck": true
   }
 }
