--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "@vernisai/typescript-config/react-library.json",
   "include": ["."],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"],
+  "compilerOptions": {
+    "types": ["node"],
+    "esModuleInterop": true,
+    "skipLibCheck": true
+  }
 }
