--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -4,8 +4,10 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["node"],
+    "skipLibCheck": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/dist/**"]
 }
