feat(api): update API and web app to integrate tRPC for data fetching
- Replaced mock data with tRPC queries in the dashboard and agent builder components
- Added loading and error handling states for improved user experience
- Updated package dependencies to ensure compatibility with tRPC
- Refactored components to utilize new TypeScript types for better type safety
- Enhanced the dashboard with dynamic data rendering and improved UI elements
- Validated changes through successful build and testing processes

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monsoft/vernisai-api",
+  "name": "@vernisai/api",
   "version": "0.1.0",
   "description": "API for VernisAI - AI-powered chat and intelligent agents",
   "author": "Monsoft Solutions - https://monsoftsolutions.com",
