--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,17 +12,22 @@
     "validate": "tsc --noEmit && eslint \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.37.1",
+    "@trpc/react-query": "^10.37.1",
+    "@trpc/server": "^10.37.1",
+    "@vernisai/api": "*",
     "@vernisai/ui": "^0.0.0",
     "lucide-react": "^0.335.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.2"
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@vernisai/eslint-config": "^0.0.0",
-    "@vernisai/typescript-config": "^0.0.0",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@vernisai/eslint-config": "^0.0.0",
+    "@vernisai/typescript-config": "^0.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.1",
