--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "build": "turbo run build",
     "dev": "npm run build && concurrently \"npm run dev:web\" \"npm run dev:api\" \"npm run dev:proxy\"",
     "dev:web": "turbo run dev --filter web",
-    "dev:api": "npm run build --workspace=@monsoft/vernisai-config && turbo run dev --filter @monsoft/vernisai-api",
+    "dev:api": "npm run build --workspace=@monsoft/vernisai-config && turbo run dev --filter @vernisai/api",
     "dev:proxy": "npm run build --workspace=@monsoft/vernisai-config && turbo run dev --filter @monsoft/vernisai-proxy",
-    "dev:all": "npm run build && turbo run dev --filter web --filter @monsoft/vernisai-api --filter @monsoft/vernisai-proxy",
+    "dev:all": "npm run build && turbo run dev --filter web --filter @vernisai/api --filter @monsoft/vernisai-proxy",
     "start": "turbo run start",
     "start:web": "turbo run start --filter web",
-    "start:api": "npm run build --workspace=@monsoft/vernisai-config && turbo run dev:server --filter @monsoft/vernisai-api",
+    "start:api": "npm run build --workspace=@monsoft/vernisai-config && turbo run dev:server --filter @vernisai/api",
     "start:proxy": "npm run build --workspace=@monsoft/vernisai-config && turbo run start --filter @monsoft/vernisai-proxy",
-    "start:all": "npm run build && turbo run start --filter web --filter @monsoft/vernisai-api --filter @monsoft/vernisai-proxy",
+    "start:all": "npm run build && turbo run start --filter web --filter @vernisai/api --filter @monsoft/vernisai-proxy",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
