feat(types): implement shared types package for centralized type definitions
- Created `@vernisai/types` package to centralize TypeScript type definitions
- Organized types by domain: chat, dashboard, user, and common utility types
- Migrated chat-related types from UI package and dashboard-related types from API package
- Added utility types for pagination and responses
- Created comprehensive documentation for usage and migration
- Validated changes through successful build and testing processes

--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": [".env", ".env.local"],
-  "tasks": {
+  "pipeline": {
     "build": {
       "dependsOn": ["^build"],
       "inputs": [
@@ -29,7 +29,12 @@
     "test": {
       "dependsOn": ["^build"],
       "outputs": ["coverage/**"],
-      "inputs": ["src/**/*.ts", "src/**/*.tsx", "test/**/*.ts", "test/**/*.tsx"]
+      "inputs": [
+        "src/**/*.ts",
+        "src/**/*.tsx",
+        "tests/**/*.ts",
+        "tests/**/*.tsx"
+      ]
     },
     "test:coverage": {
       "dependsOn": ["^build"],
@@ -44,6 +49,14 @@
       ]
     },
     "dev": {
+      "cache": false,
+      "persistent": true
+    },
+    "dev:server": {
+      "cache": false,
+      "persistent": true
+    },
+    "start": {
       "cache": false,
       "persistent": true
     },
