feat(logging): enhance logging configuration and documentation
- Updated .env.local.example to include Sentry and Better Stack configurations
- Created client-side logging documentation with Sentry integration details
- Added server-side logging documentation using Winston and Better Stack
- Established a comprehensive README for logging strategies and implementation roadmap
- Ensured all changes were validated through successful build and testing processes

--- a/.env.local.example
+++ b/.env.local.example
@@ -28,3 +28,12 @@ SUPABASE_KEY=your_supabase_key
 LANGFUSE_SECRET_KEY=your_langfuse_secret_key
 LANGFUSE_PUBLIC_KEY=your_langfuse_public_key
 LANGFUSE_HOST=https://your-langfuse-host.com
+
+
+# Sentry Configuration (optional)
+VITE_SENTRY_DSN=your_sentry_dsn_here
+VITE_SENTRY_ENVIRONMENT=development|staging|production
+
+# Better Stack Configuration (optional)
+LOGTAIL_SOURCE_TOKEN=your_logtail_source_token
+LOGTAIL_HOST=https://logs.betterstack.com
