--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": [".env", ".env.local"],
+  "globalPassThroughEnv": ["VITE_SENTRY_ORG", "VITE_SENTRY_PROJECT"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
