feat(sentry): enhance server-side error monitoring with Sentry integration
- Updated .env.local.example to include server-side Sentry configuration options
- Created a new documentation file for server-side error monitoring with Sentry
- Implemented Sentry initialization and integration for Express and TRPC applications
- Added guidelines for manual error capturing, performance monitoring, and user context management
- Ensured proper handling of sensitive data and PII in error reporting
- Validated changes through successful build and testing processes

--- a/.env.local.example
+++ b/.env.local.example
@@ -31,8 +31,14 @@ LANGFUSE_HOST=https://your-langfuse-host.com
 
 
 # Sentry Configuration (optional)
-VITE_SENTRY_DSN=your_sentry_dsn_here
+# Client-side Sentry DSN for browser error tracking (used in the web application)
+VITE_SENTRY_DSN=your_client_sentry_dsn_here
 VITE_SENTRY_ENVIRONMENT=development|staging|production
+
+# Server-side Sentry DSN for backend error tracking (used in the API server)
+SENTRY_SERVER_DSN=your_server_sentry_dsn_here
+SENTRY_SERVER_ENVIRONMENT=development|staging|production
+SENTRY_AUTH_TOKEN=your_sentry_auth_token  # For source map uploadsS
 
 # Better Stack Configuration (optional)
 LOGTAIL_SOURCE_TOKEN=your_logtail_source_token
