--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,6 +23,8 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@logtail/node": "^0.5.2",
+    "@logtail/winston": "^0.5.2",
     "@monsoft/vernisai-config": "*",
     "@trpc/server": "^10.44.1",
     "@vernisai/database": "*",
@@ -32,6 +34,8 @@
     "next": "^14.0.4",
     "superjson": "^2.2.1",
     "trpc-openapi": "^1.2.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
