feat(api): migrate logging to @vernisai/logger package
- Replaced Winston and Logtail dependencies with the new @vernisai/logger package
- Updated API logger configuration to utilize the centralized logger
- Refactored logging middleware to align with new logging patterns
- Enhanced type safety for logging interfaces and request context
- Improved code organization by leveraging the new logger package
- Verified logging functionality through successful build and testing processes

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,11 +23,10 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@logtail/node": "^0.5.2",
-    "@logtail/winston": "^0.5.2",
     "@monsoft/vernisai-config": "*",
     "@trpc/server": "^10.44.1",
     "@vernisai/database": "*",
+    "@vernisai/logger": "*",
     "@vernisai/types": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
@@ -35,7 +34,6 @@
     "superjson": "^2.2.1",
     "trpc-openapi": "^1.2.0",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
