--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -23,7 +23,10 @@
     "@ai-sdk/openai": "^1.3.2",
     "@vernisai/logger": "*",
     "ai": "^4.2.5",
-    "langfuse": "^3.37.0"
+    "langfuse": "^3.37.0",
+    "@anthropic-ai/sdk": "^0.14.0",
+    "openai": "^4.28.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.17.25",
